Resolved button layout issues at smaller screen sizes.

--- a/src/components/styleComponents.css
+++ b/src/components/styleComponents.css
@@ -129,7 +129,6 @@ h6 {
 
 .circle-wrapper {
   display: flex; /* Stacks button content (icons and text) vertically */
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #54A051;
@@ -225,13 +224,37 @@ a:active.circle-wrapper::after {
 }
 
 #notBtn span {
-  margin-left: 20px;
+  margin-left: 20px; /* Space between icon and text */
 }
 
 .circle-wrapper img {
   max-width: 150px;
   margin-bottom: 1rem; /* Space between image and text */
 }
+
+@media only screen and (max-width: 500px) {
+  .circle-wrapper {
+    margin-top: 50px;
+    width: 300px; /* Smaller width */
+    height: 300px; /* Smaller height to maintain circle shape */
+    font-size: 1.5rem;
+    border: 5px solid rgba(255, 255, 255, 0.5); /* Thinner border */
+    box-shadow: 8px 8px 3px 0 var(--shadow);
+    }
+
+    .content-wrapper {
+      flex-direction: column; /* Changes the button content structure to a column layout for smaller screens */
+    }
+
+    #notBtn span {
+      margin-left: 0;
+    }
+
+    .btn {  /* Scales down buttons for smaller screens */
+      padding: 1rem;
+      font-size: 1rem;
+    }
+  }
 /* End of button styling */
 
 
